<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_show"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/ic_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_menu"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toTopOf="@+id/img_show" />

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/content_description_heart_icon"
        android:src="@drawable/ellipsis_vertical_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_title"
        app:tint="#8F8F8F" />

    <TextView
        android:id="@+id/txt_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/release"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre" />

</androidx.constraintlayout.widget.ConstraintLayout>