<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="defaultPosition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.EpisodeDetailFragment">

        <ImageView
            android:id="@+id/img_episode"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/episode_banner"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_episode_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/episode_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_episode" />

        <TextView
            android:id="@+id/txt_season_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/season"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_episode_title" />

        <TextView
            android:id="@+id/txt_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/episode"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/txt_episode_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_season_episode" />

        <TextView
            android:id="@+id/txt_episode_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:text="@string/description"
            android:lineSpacingExtra="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_episode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>