<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShowDetailFragment">

    <ImageView
        android:id="@+id/img_show"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/ic_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="28dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_release"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/release"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_show">

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </ScrollView>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="15dp"
        android:background="#8F90E4"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/season_bar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeason"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_season_list" />

</androidx.constraintlayout.widget.ConstraintLayout>